@@ -31,6 +31,7 @@ depth: 1
  * Clean up some unused utility classes and migrate `unlist` to Tailwind utility class `w-list-none` (Loveth Omokaro)
  * Ensure that the `rebuild_references_index` command can run without console output if called with `--verbosity 0` (Omerzahid Ali, Aman Pandey)
  * Add development (contributing to Wagtail) documentation notes for [development on Windows](development_on_windows) (Akua Dokua Asiedu)
+ * Clean up linting on legacy code and add shared util `hasOwn` in TypeScript (Loveth Omokaro)
 
 ### Bug fixes
 
